--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,11 @@ header{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-style: none;
     margin-bottom: 5px;
+    transition:height 2s;
+}
+
+.menu li:hover{
+    height: 50px;
 }
        
 .home{
@@ -63,15 +68,21 @@ header{
    align-self:flex-start;
    margin-left: 10px;
    position: fixed;
-
+   
     
 }
+
+
 
 .imgHeart{
     width: 25px;
    height: 25px;
+   
+
 
 }
+
+
 
 
 .contenedor{
@@ -135,7 +146,20 @@ header{
    font-size: 30px;
    color: lavender;
    margin: 10px;
-   
+   transform: skewY(30deg);
+   animation-duration: 5s;
+   animation-name: desaparecer;
+   animation-iteration-count: infinite; 
+}
+
+@keyframes desaparecer{
+    100%{
+        opacity: 1;
+    }
+
+    0%{
+        opacity: 0;
+    }
 }
 
 .centrado3{
@@ -412,7 +436,8 @@ footer{
         align-items: center;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         background-color: lavender;
-        justify-content:center
+        justify-content:center;
+        background-image: linear-gradient(to right, blue,white);
         
 
     }
