--- a/css/styles.css
+++ b/css/styles.css
@@ -145,21 +145,9 @@ header{
    font-size: 30px;
    color: lavender;
    margin: 10px;
-   transform: skewY(30deg);
-   animation-duration: 5s;
-   animation-name: desaparecer;
-   animation-iteration-count: infinite; 
+
 }
 
-@keyframes desaparecer{
-    100%{
-        opacity: 1;
-    }
-
-    0%{
-        opacity: 0;
-    }
-}
 
 .centrado3{
     position: absolute;
@@ -246,12 +234,7 @@ h1{
 
 }
 
-.alineacionCaja textarea{
-    width: 86%;
-    height: 100px;
 
-
-}
 
 .formtexto{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -331,10 +314,14 @@ label{
         height: 100%;
         position: static;
         background-size: cover;
-        object-fit: cover;
+       
     
     
 } 
+.img-fluid{
+    height: auto;
+}
+
 
 .imgOso{
     width: 320px;
@@ -401,6 +388,8 @@ legend{
     font-size: medium;
 }
 
+
+
 .hitosClima{
        background-image: url(../imagenes/textura.jpg);
        border: none;
@@ -441,7 +430,7 @@ footer{
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         background-color: lavender;
         justify-content:center;
-        background-image: linear-gradient(to right, blue,white);
+        background-image: linear-gradient(to right, lightblue,white);
         
 
     }
@@ -513,6 +502,7 @@ flex-wrap: wrap;
     
 }
 
+
   
 .centrado{
     font-size: 50px;
@@ -560,9 +550,6 @@ h1{
     height: 15%;
 }
         
-.alineacionCaja input{
-    width: 86%;
-}
 
 .alineacionCaja fieldset{
     width: 80%;
