--- a/css/styles.css
+++ b/css/styles.css
@@ -353,20 +353,13 @@ h3{
 
 
     
-table{
-        width: 100%;
-        border: 4px solid lightcoral;
-        text-align: center;
-        border-collapse: collapse;
-        margin: 0 0 1em 0;
-        caption-side: top;
-}
+
 caption, td, th{
         padding: 0.3em;
         font-size: 10px;
 }
 
-th, td{
+.hitosClima th, td{
         border-bottom: 1px solid #999;
         width: 25%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -374,11 +367,7 @@ th, td{
         font-size: 10px;
 }
 
-fieldset{
-    border: none;
-    align-items: center;
-}
-     
+ 
 caption{
         font-weight: bold;
         font-style: italic;
@@ -602,10 +591,7 @@ p{
     width: 100%;
     height: 100%;
 }
- 
-
-     
-        
+  
 .hitosClima{
         height: 540px;
         width: 1279px;
