--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@
     
 }
 
-
 .gridContainer{
     display: grid; 
     grid-template-columns: 100%;
@@ -17,6 +16,7 @@
     grid-template-areas: "header" "contenedor"
      "contenedor2" "footer";
 }
+
 
 
 body{
@@ -28,34 +28,17 @@ header{
     grid-area: header;
     align-items: center ;
     background-color: lavender;
-    margin: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-
-}
-
-.menu{
     font-size: small;
-    display: flex;
-    flex-direction:column;
-    height: 60px ;
-    flex-wrap: wrap;
-    justify-content: space-around;
-        
+   
+
 }
 
-.menu li{
-    color: lavender;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-style: none;
-    margin-bottom: 5px;
-    transition:height 2s;
+.carousel img{
+    width: 100%;
+    height: 500px;
+    
 }
 
-.menu li:hover{
-    height: 50px;
-}
        
 .home{
 
@@ -68,6 +51,7 @@ header{
    align-self:flex-start;
    margin-left: 10px;
    position: fixed;
+   
    
     
 }
@@ -82,19 +66,20 @@ header{
 
 }
 
+li:hover{
+    background-color: lavender;
+}
 
 
 
 .contenedor{
     grid-area: contenedor;
-    position: relative;
     display: flex;
     flex-direction: row;
-    align-items:center;
-    
-    
+
 
 }
+
 
 
 .contenedor2{
@@ -145,6 +130,7 @@ header{
    font-size: 30px;
    color: lavender;
    margin: 10px;
+   align-self: center;
 
 }
 
@@ -168,16 +154,52 @@ h1{
     font-size: 15px;
 }
 
+h2{
+    color: lavender;
+    margin: 20px;
+    font-family: "quicksand";
+    font-size: 20px;
+}
+
+
+
 .contenedor h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
+
+}
+
+.card-img-top{
+    object-fit: cover;
+    height: 40%;
+
+}
+
+.card-title{
+    font-size: small;
+
+}
+
+.card-body{
+    font-size: smaller;
+    height: 100px;
+}
+
+.col{
+    height: 130px;
+}
+
+.titularReservas{
+    color: coral;
+    margin: 0px;
+    padding: 0px;
 }
 
 .imgFocas{
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover;
-    position: absolute;
+    
 }
 
 .imgQuehacemos{
@@ -195,24 +217,35 @@ h1{
     align-self: center;
     width: 250px;
     height: 50px;
-    font-size: 20px; 
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
+
 
 
 .alineacionCaja{
     height: 300px;
     font-size: 13px;
-    position: relative;
+    position: absolute;
     margin: 20px;
     padding: 20px;
     align-self: center;
     
+    
+}
+
+.alineacionCaja h1{
+    color: white;
 }
 
 .alineacionCaja input{
     width: 50%;
     height: 20px;
 
+}
+
+.destacado:hover{
+    background-color:#999 ;
 }
 
 .textoredes{
@@ -261,10 +294,8 @@ label{
     
         height:200px;
         width: 200px;
-        font-size: medium;
-        align-self: center;
-        justify-self: center;
 }
+        
 
 
 .informacionDerecha{
@@ -273,14 +304,11 @@ label{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: lavender;
     height: 200px;
-    width: 250px;
+  
     margin: 10px;
     padding: 10px;
     align-self: flex-end;
     display: inline-block;
-
-    
-    
 
 }
 
@@ -297,7 +325,6 @@ label{
 
 }
 
-  
   
 .informacionIzq{
     height: 300px;
@@ -320,13 +347,15 @@ label{
 } 
 .img-fluid{
     height: auto;
+    width: auto;
+    object-fit: cover;
 }
 
 
 .imgOso{
     width: 320px;
     height: 100%;
-    position:absolute;
+    
     object-fit: cover;
 
 
@@ -353,20 +382,30 @@ h3{
 
 
     
-
+table{
+    width: 100%;
+    border: 4px solid lightcoral;
+    text-align: center;
+    border-collapse: collapse;
+    margin: 0 0 1em 0;
+    caption-side: top;
+}
 caption, td, th{
         padding: 0.3em;
         font-size: 10px;
 }
 
-.hitosClima th, td{
+th, td{
         border-bottom: 1px solid #999;
         width: 25%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: lavender;
         font-size: 10px;
 }
-
+fieldset{
+    border: none;
+    align-items: center;
+}
  
 caption{
         font-weight: bold;
@@ -387,7 +426,9 @@ legend{
 
    }
 
-
+.hitosClima h3{
+    color: white;
+}
 
 
 
@@ -520,6 +561,22 @@ h1{
     font-size: 40px;
     
             
+}
+
+table{
+    height: 400px ;
+}
+
+        
+th, td{
+                
+    font-size: medium;
+    border: 4px solid lightcoral;
+}
+
+fieldset{
+   height: 520px;
+   border: none;
 }
         
         
