--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ header{
    height: 20px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 30px;
-   align-self:flex-start;
+   align-self:flex-end;
    margin-left: 10px;
    position: fixed;
    
@@ -75,12 +75,15 @@ li:hover{
 .contenedor{
     grid-area: contenedor;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
 
 }
 
-
+.container-fluid{
+    padding: 0px;
+    margin: 0px;
+}
 
 .contenedor2{
     grid-area: contenedor2;
@@ -88,6 +91,7 @@ li:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     
 }
 
@@ -129,8 +133,9 @@ li:hover{
    width: 100px;
    font-size: 30px;
    color: lavender;
-   margin: 10px;
-   align-self: center;
+   margin: 20px;
+   justify-self:center;
+
 
 }
 
@@ -140,10 +145,10 @@ li:hover{
     width: 200px;
     height: 80px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     color: lavender;
     margin: 20px;
-    padding: 20px;
+    align-self: center;
     
 }
    
@@ -204,8 +209,9 @@ h2{
 
 .imgQuehacemos{
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover;
+
 
 }
 
@@ -338,8 +344,8 @@ label{
 
 .imgOceano{
         width: 100%;
-        height: 100%;
-        position: static;
+        height: 500px;
+        position: absolute;
         background-size: cover;
        
     
@@ -465,7 +471,8 @@ footer{
 
     }
 
-    
+@media screen and (min-width: 600px) {  
+    }  
    
 @media screen and (min-width: 768px) { 
 
@@ -473,21 +480,13 @@ footer{
 .gridContainer{
     display: grid; 
     grid-template-columns: 100% ;
-    grid-template-rows: 40px 600px 600px 60px ;
+    grid-template-rows: 40px 600px 600px 112px ;
     grid-template-areas: "header" "contenedor"
     "contenedor2" "footer";
 }
 
-
-
-.menu{
-    
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
+header{
     font-size: medium;
-    align-items: center;
-                
 }
 
           
@@ -532,15 +531,23 @@ flex-wrap: wrap;
     
 }
 
-
+.contenedor2{
+    height: 600px;
+}
   
 .centrado{
     font-size: 50px;
-    margin-left: 30px;
-    padding-left: 20px;
+    width: 500px;
  
 }
-            
+ 
+
+.carousel img{
+    width: 100%;
+    height: 600px;
+    
+}
+
        
 .centrado3{
     font-size: 50px;
@@ -558,44 +565,52 @@ h1{
  .textomodificado{
     width: 500px;
     height: 200px;
-    font-size: 40px;
+  
     
             
 }
 
+.textomodificado h2{
+    font-size: 40px;
+}
+
 table{
-    height: 400px ;
+    height: 300px ;
 }
 
         
 th, td{
                 
-    font-size: medium;
-    border: 4px solid lightcoral;
+   font-size: medium;
+
 }
 
 fieldset{
-   height: 520px;
+   height: 400px;
    border: none;
 }
         
         
 .alineacionCaja{
-    width: 500px;
-    height: 400px;
+    width: 700px;
+    height: 600px;
     font-size: 30px;
     margin: 50px;
-    align-self: center;
-    justify-content: center;
+    justify-items: center;
 
 }
 
 .alineacionCaja select{
-    width: 80%;
+    width: 60%;
     margin: 10px;
     height: 15%;
 }
         
+.alineacionCaja input{
+    width: 60%;
+    height: 30px;
+    font-size: 15px;
+}
 
 
 .allineacionCaja p legend{
@@ -627,6 +642,7 @@ label{
 .informacionDerecha{
     width: 300px;
     
+    
 }
 
 p{
@@ -640,19 +656,38 @@ p{
 
        
 .informacionIzq{
-    width: 500px;
+    width: 600px;
+    height: 300px;
 
 }
-                       
+
+.imgFocas{
+    height: 900px;
+}
+
+.imgQuehacemos{
+    height: 100%;
+    width: 100%;
+   
+}
+
 .imgOso{
     width: 100%;
     height: 100%;
 }
   
 .hitosClima{
-        height: 540px;
-        width: 1279px;
+
+ width: 100%;
+ height: 400px;
+        
             
 }
-        
+iframe.video{ 
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+}
+       
 }       
