--- a/css/styles.css
+++ b/css/styles.css
@@ -9,91 +9,57 @@
     
 }
 
-.gridContainer{
-    display: grid; 
-    grid-template-columns: 100%;
-    grid-template-rows: 60px 500px 500px 60px ;
-    grid-template-areas: "header" "contenedor"
-     "contenedor2" "footer";
-}
-
-
-
 body{
     background-color:white
     
 }
 
-header{
-    grid-area: header;
-    align-items: center ;
-    background-color: lavender;
-    font-size: small;
-   
-
+.gridContainer{
+    display: grid; 
+    grid-template-columns: 100%;
+    grid-template-rows: 60px auto auto 60px ;
+    grid-template-areas: 
+    "header" 
+    "contenedor"
+     "contenedor2" 
+     "footer";
 }
-
-.carousel img{
-    width: 100%;
-    height: 500px;
-    
-}
-
-       
-.home{
-
-   position: absolute;
-   display: flex;
-   width: 50px;
-   height: 20px;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
-   font-size: 30px;
-   align-self:flex-end;
-   margin-left: 10px;
-   position: fixed;
-   
-   
-    
-}
-
-
-
-.imgHeart{
-    width: 25px;
-   height: 25px;
-   
-
-
-}
-
-li:hover{
-    background-color: lavender;
-}
-
-
 
 .contenedor{
     grid-area: contenedor;
+    position: relative;
     display: flex;
-    flex-direction: column;
-
-
-}
-
-.container-fluid{
-    padding: 0px;
-    margin: 0px;
-}
-
-.contenedor2{
-    grid-area: contenedor2;
-    display: flex;   
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: start;
+
+   
+}
+
+ .imgFocas{
     width: 100%;
     
 }
+
+.centrado{
+    position: absolute;
+ 
+ }
+
+.contenedor2{
+    position: relative;
+    display: flex;   
+    justify-content: center;
+    align-items: center;  
+}
+
+.textomodificado{
+    position: absolute;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+}
+
+
+
 
 
 .contenedorAlianza{
@@ -106,6 +72,32 @@ li:hover{
     
        
 }
+
+.home{
+
+    position: absolute;
+    display: flex;
+    width: 50px;
+    height: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    align-self:flex-end;
+    margin-left: 10px;
+    position: fixed;
+    
+    
+     
+ }
+ 
+ 
+ 
+ .imgHeart{
+     width: 25px;
+    height: 25px;
+    
+ 
+ 
+ }
 
 .tabla li{
     padding: 0px;
@@ -128,16 +120,7 @@ li:hover{
     
 }
 
-.centrado{
-   position: absolute;
-   width: 100px;
-   font-size: 30px;
-   color: lavender;
-   margin: 20px;
-   justify-self:center;
 
-
-}
 
 
 .centrado3{
@@ -148,7 +131,8 @@ li:hover{
     font-size: 25px;
     color: lavender;
     margin: 20px;
-    align-self: center;
+    justify-self: center;
+   
     
 }
    
@@ -200,32 +184,19 @@ h2{
     padding: 0px;
 }
 
-.imgFocas{
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-    
-}
+
 
 .imgQuehacemos{
     width: 100%;
-    height: 500px;
+    height: 100%;
+
     object-fit: cover;
 
 
 }
 
 
-.textomodificado{
-    position: absolute;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    width: 250px;
-    height: 50px;
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif; 
-}
+
 
 
 
@@ -368,7 +339,6 @@ label{
 
 }
 
-
         
 
 a{
@@ -428,7 +398,7 @@ legend{
        background-image: url(../imagenes/textura.jpg);
        border: none;
        height: 200px;
-       width: 320px;
+      
 
    }
 
@@ -476,6 +446,10 @@ footer{
    
 @media screen and (min-width: 768px) { 
 
+    li:hover{
+        background-color: lavender;
+    }
+    
        
 .gridContainer{
     display: grid; 
