--- a/css/styles2.css
+++ b/css/styles2.css
@@ -20,10 +20,6 @@ h1{
     margin: 0px;
 }
 
-.centrado{
-    position: absolute;
- 
- }
 
 
 .image-container {
@@ -34,8 +30,8 @@ h1{
 
 .centered-text {
     position: absolute;
-    top: 50%;
-    left: 20%;
+    top: 30%;
+    left: 30%;
     transform: translate(-50%, -50%);
 }
 
@@ -57,7 +53,9 @@ h1{
 }
 
 body {
-    background-image: url("../imagenes/corales.jpeg");
+     background: rgb(2,0,36);
+background: linear-gradient(162deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); 
+height: 10%
 
 
 }
@@ -67,6 +65,6 @@ body {
 }
 
 footer{
-    background-color: lightblue;
+    background-color: rgb(59, 189, 233);
 }
 
