--- a/css/styles.css
+++ b/css/styles.css
@@ -1,670 +1,58 @@
 @font-face {
-    font-family: "quicksand";
-     src: url('../Fonts/quicksand/Quicksand-Bold.otf')
-}
-
+  font-family: "quicksand";
+  src: url("../Fonts/quicksand/Quicksand-Bold.otf"); }
 
 * {
-    margin: 0px;
-    
-}
-
-body{
-    background-color:white
-    
-}
-
-.gridContainer{
-    display: grid; 
-    grid-template-columns: 100%;
-    grid-template-rows: 60px auto auto 60px ;
-    grid-template-areas: 
-    "header" 
-    "contenedor"
-     "contenedor2" 
-     "footer";
-}
-
-.contenedor{
-    grid-area: contenedor;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-
-   
-}
-
- .imgFocas{
-    width: 100%;
-    
-}
-
-.centrado{
-    position: absolute;
- 
- }
-
-.contenedor2{
-    position: relative;
-    display: flex;   
-    justify-content: center;
-    align-items: center;  
-}
-
-.textomodificado{
-    position: absolute;
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif; 
-}
-
-
-
-
-
-.contenedorAlianza{
-    display: flex;
-    border-style: hidden;
-    align-content: center;
-    color: white;
-    height: 300px;
-    width: 320px;
-    
-       
-}
-
-.home{
-
-    position: absolute;
-    display: flex;
-    width: 50px;
-    height: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    align-self:flex-end;
-    margin-left: 10px;
-    position: fixed;
-    
-    
-     
- }
- 
- 
- 
- .imgHeart{
-     width: 25px;
-    height: 25px;
-    
- 
- 
- }
-
-.tabla li{
-    padding: 0px;
-    margin: 0px;
-    width: 60px;
-}
-
-.tabla ul{
-    padding: 0px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-}
-
-.logosAlianzas{
-    width: 200px;
-    height: 30px;
-    position: relative;
-    object-fit:contain;
-    margin-top: 20px;
-    
-}
-
-
-
-
-.centrado3{
-    position: absolute;
-    width: 200px;
-    height: 80px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
-    color: lavender;
-    margin: 20px;
-    justify-self: center;
-   
-    
-}
-   
-h1{
-    color: lavender;
-    margin: 20px;
-    font-family: "quicksand";
-    font-size: 15px;
-}
-
-h2{
-    color: lavender;
-    margin: 20px;
-    font-family: "quicksand";
-    font-size: 20px;
-}
-
-
-
-.contenedor h1{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-
-}
-
-.card-img-top{
-    object-fit: cover;
-    height: 40%;
-
-}
-
-.card-title{
-    font-size: small;
-
-}
-
-.card-body{
-    font-size: smaller;
-    height: 100px;
-}
-
-.col{
-    height: 130px;
-}
-
-.titularReservas{
-    color: coral;
-    margin: 0px;
-    padding: 0px;
-}
-
-
-
-.imgQuehacemos{
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-
-
-}
-
-
-
-
-
-
-.alineacionCaja{
-    height: 300px;
-    font-size: 13px;
-    position: absolute;
-    margin: 20px;
-    padding: 20px;
-    align-self: center;
-    
-    
-}
-
-.alineacionCaja h1{
-    color: white;
-}
-
-.alineacionCaja input{
-    width: 50%;
-    height: 20px;
-
-}
-
-.destacado:hover{
-    background-color:#999 ;
-}
-
-.textoredes{
-    position: absolute;
-    width: 250px;
-    height: 150px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    color: lavender;
-    font-size: 10px;
-}
-
-.alineacionCaja button{
-    
-    border: none;
-    cursor: pointer;
-    height: 10px;
-    padding: 20px;
-
-}
-
-
-
-.formtexto{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size:small;
-}
-
-.titularContacto{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size:large;
-
-}
-
-label{
-    font-size:small;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: lavender;
-    justify-content: center;
-    align-items: center;
-    
-    
-}
-
-.cajaAporta{
-    
-        height:200px;
-        width: 200px;
-}
-        
-
-
-.informacionDerecha{
-
-    position:absolute;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: lavender;
-    height: 200px;
-  
-    margin: 10px;
-    padding: 10px;
-    align-self: flex-end;
-    display: inline-block;
-
-}
-
-.informacionDerecha3{
-    width: 200px;
-    height: 200px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: lavender;
-    position: absolute;
-    font-size: small;
-    margin-top: 10px;
-    padding-top: 30px;
-
-
-}
-
-  
-.informacionIzq{
-    height: 300px;
-    width: 250px;
-    position: absolute ;
-    color: lavender;
-   
-}
-        
-
-
-.imgOceano{
-        width: 100%;
-        height: 500px;
-        position: absolute;
-        background-size: cover;
-       
-    
-    
-} 
-.img-fluid{
-    height: auto;
-    width: auto;
-    object-fit: cover;
-}
-
-
-.imgOso{
-    width: 320px;
-    height: 100%;
-    
-    object-fit: cover;
-
-
-
-}
-
-        
-
-a{
-    text-decoration: none;
-        color: lightcoral;
-}
-
-p{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 10px;
-}
-
-h3{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size:medium;
-}
-
-
-    
-table{
-    width: 100%;
-    border: 4px solid lightcoral;
-    text-align: center;
-    border-collapse: collapse;
-    margin: 0 0 1em 0;
-    caption-side: top;
-}
-caption, td, th{
-        padding: 0.3em;
-        font-size: 10px;
-}
-
-th, td{
-        border-bottom: 1px solid #999;
-        width: 25%;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: lavender;
-        font-size: 10px;
-}
-fieldset{
-    border: none;
-    align-items: center;
-}
- 
-caption{
-        font-weight: bold;
-        font-style: italic;
-}
-
-legend{
-    font-size: medium;
-}
-
-
-
-.hitosClima{
-       background-image: url(../imagenes/textura.jpg);
-       border: none;
-       height: 200px;
-      
-
-   }
-
-.hitosClima h3{
-    color: white;
-}
-
-
-
-.fecha{
-
-    border-style: ridge;        
-    border-right: 0px;
-    border-left: 0px;
-    border-top: 0px;
-    
-}
-
-.titularfooter{
-        
-        border-style: ridge;
-        color: lightcoral;
-        font-size: 15px;
-        margin: 10px;
-}
-
-.redes{
-    margin: 10px;
-}
-
-footer{
-        grid-area: footer;
-        display: flex;
-        align-items: center;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        background-color: lavender;
-        justify-content:center;
-        background-image: linear-gradient(to right, lightblue,white);
-        
-
-    }
-
-@media screen and (min-width: 600px) {  
-    }  
-   
-@media screen and (min-width: 768px) { 
-
-
-
-    
-    li:hover{
-        background-color: lavender;
-    }
-    
-       
-.gridContainer{
-    display: grid; 
-    grid-template-columns: 100% ;
-    grid-template-rows: 40px 600px 600px 112px ;
-    grid-template-areas: "header" "contenedor"
-    "contenedor2" "footer";
-}
-
-header{
-    font-size: medium;
-}
-
-          
-.home{
-
-align-self: flex-start; 
-flex-wrap: wrap;
-
-}
-
-.textoHome{
-    font-size: small;
-    
-}
-  
-
-.imgHeart{
-   width: 40px;
-   height: 40px;
-
-}
-        
-.contenedorAlianza{
-    width: 1279px;
-    height: 60px;
-    justify-content: center;
-   
-    
-}
-        
-.tabla li{
-     display: inline;
-     
-}
-
-
-.contenedor{
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    justify-content: center;
-    
-}
-
-.contenedor2{
-    height: 600px;
-}
-  
-.centrado{
-    font-size: 50px;
-    width: 500px;
- 
-}
- 
-
-.carousel img{
-    width: 100%;
-    height: 600px;
-    
-}
-
-       
-.centrado3{
-    font-size: 50px;
-    margin-left: 35px;
-    padding-left: 40px;
-       
-}
-            
-           
-h1{
-    font-size: 25px;
-}
-        
-           
- .textomodificado{
-    width: 500px;
-    height: 200px;
-  
-    
-            
-}
-
-.textomodificado h2{
-    font-size: 40px;
-}
-
-table{
-    height: 300px ;
-}
-
-        
-th, td{
-                
-   font-size: medium;
-
-}
-
-fieldset{
-   height: 400px;
-   border: none;
-}
-        
-        
-.alineacionCaja{
-    width: 700px;
-    height: 600px;
-    font-size: 30px;
-    margin: 50px;
-    justify-items: center;
-
-}
-
-.alineacionCaja select{
-    width: 60%;
-    margin: 10px;
-    height: 15%;
-}
-        
-.alineacionCaja input{
-    width: 60%;
-    height: 30px;
-    font-size: 15px;
-}
-
-
-.allineacionCaja p legend{
-    font-size: 20px;
-}
-
-.formtexto{
-    align-items: center;
-}
-
-.check{
-    align-self: center;
-}
-        
-.textoredes{
-    width: 300px;
-    height: 300px;
-    font-size:medium;
-}
-
-.hitosClima{
-     height: 520px;
-}
-      
-label{
-   font-size: medium;
-}
-        
-.informacionDerecha{
-    width: 300px;
-    
-    
-}
-
-p{
-    font-size: 13px;
-}
-
-.informacionDerecha3{
-    width: 500px;
-           
-}
-
-       
-.informacionIzq{
-    width: 600px;
-    height: 300px;
-
-}
-
-.imgFocas{
-    height: 900px;
-}
-
-.imgQuehacemos{
-    height: 100%;
-    width: 100%;
-   
-}
-
-.imgOso{
-    width: 100%;
-    height: 100%;
-}
-  
-.hitosClima{
-
- width: 100%;
- height: 400px;
-        
-            
-}
-iframe.video{ 
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-}
-       
-}       
+  margin: 0px; }
+
+h1 {
+  font-family: "quicksand"; }
+
+p {
+  font-family: "verdana"; }
+
+.container-fluid {
+  padding: 0px;
+  margin: 0px; }
+
+.image-container {
+  position: relative;
+  text-align: center;
+  color: white; }
+
+.centered-text {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  transform: translate(-50%, -50%); }
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover; }
+
+.card-img-bottom {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover; }
+
+.destacado:hover {
+  background-color: coral; }
+
+.subrayado:hover {
+  text-decoration: underline;
+  color: coral; }
+
+body {
+  background: #020024;
+  background: #69BCDD;
+  height: 10%; }
+
+.space-between {
+  padding-top: 100px; }
+
+footer {
+  background-color: #f2e3bc; }
+  footer a {
+    color: #69BCDD;
+    text-decoration: none; }
