--- a/css/styles.css
+++ b/css/styles.css
@@ -27,13 +27,7 @@ p {
   left: 30%;
   transform: translate(-50%, -50%); }
 
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
-  box-shadow: 0 10px 30px white; }
-
-.card-img-bottom {
+.card-img-top, .card-img-bottom {
   width: 100%;
   height: 15vw;
   object-fit: cover;
