--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,10 +55,7 @@ p{
 
 
 .card-img-bottom{
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
-    box-shadow: $shadow;
+    @extend .card-img-top;
 
 }
 .destacado:hover{
