--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -79,13 +79,13 @@ height: 10%
 }
 
 
-
 footer{
     background-color: color(color-terciario);
 
    a{
        color: color(color-pricipal);
        text-decoration: none;
+       padding: 5px;
 
    }
 }
@@ -103,4 +103,17 @@ footer{
     h1 {
     font-size:50px;
     }
+
+    .carousel-inner{
+        @extend .carousel-item;
+
+    }
+
+
+    .carousel-item{
+    p{
+        padding-bottom: 20px;
+    }
+}
+
 }
