--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 //mapa de colores
-$colors:(color-principal:#69BCDD, color-texto: white, color-secundario: coral, color-terciario:#f2e3bc);
+$colors:(color-principal:#69BCDD, color-texto: white, color-secundario: coral, color-terciario:#e4e4e1, color-neutro:black);
 
 //breakpoint
 $desktop: 992px;
