--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,11 @@ p {
   position: absolute;
   top: 30%;
   left: 30%;
-  transform: translate(-50%, -50%);
-  margin-top: 5px; }
+  transform: translate(-50%, -50%); }
 
 .card-img-top, .card-img-bottom {
   width: 100%;
-  height: 15vw;
+  height: 50%;
   object-fit: cover;
   box-shadow: 0 10px 30px white; }
 
@@ -49,9 +48,10 @@ body {
   padding-top: 100px; }
 
 footer {
-  background-color: #f2e3bc; }
+  background-color: #e4e4e1; }
   footer a {
     text-decoration: none;
+    color: black;
     padding: 5px; }
 
 @media (min-width: 992px) {
