--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,7 @@
 }
 
 
+
 h1{
     font-family: $text-title;
     font-size: 30px;
@@ -44,12 +45,12 @@ p{
     top: 30%;
     left: 30%;
     transform: translate(-50%, -50%);
-    margin-top: 5px;
+    
 }
 
 .card-img-top{
     width: 100%;
-    height: 15vw;
+    height: 50%;
     object-fit: cover;
     box-shadow: $shadow;
 }
@@ -80,15 +81,20 @@ height: 10%
 }
 
 
+
 footer{
     background-color: color(color-terciario);
+   
 
    a{
-       color: color(color-pricipal);
+
        text-decoration: none;
+       color: color(color-neutro);
        padding: 5px;
+       
 
    }
+
 }
 
 @mixin desktop {
@@ -113,7 +119,11 @@ footer{
     .carousel-item{
     p{
         padding-bottom: 20px;
+        
     }
+
+    
 }
+
 
 }
